bgd/bgd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: bgdd
  name: bgdd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bgdd
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bgdd
    spec:
      containers:
      - image: quay.io/redhatworkshops/bgd:latest
        name: bgdd
        resources: {}
---
