bgd/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: bgdd
  name: bgdd
  namespace: bgdd
spec:
  host: ""
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgdd
    weight: 100
status: {}
